tools/crates/vendor/zerocopy/tests/ui-stable/ptr-is-invariant-over-v.stderr
error: lifetime may not live long enough
  --> tests/ui-stable/ptr-is-invariant-over-v.rs:19:5
   |
15 | fn _when_exclusive<'big: 'small, 'small>(
   |                    ----          ------ lifetime `'small` defined here
   |                    |
   |                    lifetime `'big` defined here
...
19 |     _small = big;
   |     ^^^^^^^^^^^^ assignment requires that `'small` must outlive `'big`
   |
   = help: consider adding the following bound: `'small: 'big`
   = note: requirement occurs because of the type `Ptr<'_, &u32, (invariant::Exclusive, Aligned, Valid)>`, which makes the generic argument `&u32` invariant
   = note: the struct `Ptr<'a, T, I>` is invariant over the parameter `T`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error: lifetime may not live long enough
  --> tests/ui-stable/ptr-is-invariant-over-v.rs:26:5
   |
22 | fn _when_shared<'big: 'small, 'small>(
   |                 ----          ------ lifetime `'small` defined here
   |                 |
   |                 lifetime `'big` defined here
...
26 |     _small = big;
   |     ^^^^^^^^^^^^ assignment requires that `'small` must outlive `'big`
   |
   = help: consider adding the following bound: `'small: 'big`
   = note: requirement occurs because of the type `Ptr<'_, &u32, (Shared, Aligned, Valid)>`, which makes the generic argument `&u32` invariant
   = note: the struct `Ptr<'a, T, I>` is invariant over the parameter `T`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
